css/article.css
article p {
    margin: 0.6em 0;
    line-height: 160%;
}

article h1 {
    font-weight: bold;
    font-size: 180%;
    margin-top: 1.4em;
    margin-bottom: 0.8em;
}

article h2 {
    font-size: 130%;
    font-weight: bold;
    margin-top: 1.4em;
    margin-bottom: 0.8em;
}

article h3 {
    font-size: 110%;
    font-weight: bold;
    margin-top: 1.4em;
    margin-bottom: 0.8em;
}

article blockquote {
    margin: 1.5em 2em;
}

article img {
    max-width: 100%;
}

.note {
    padding: 4pt;
    margin: 2pt 0;
    background: #cbcbff;
}

.box {
    background: #dfedf8;
    margin: 10pt 0;
    padding: 6pt;
}

.table {
    background: #f3f3f3;
    margin: 10pt 0;
    padding: 6pt;
    max-width: 100%;
    overflow: auto;
}

.table table {
    width: 100%;
    font-size: inherit;
    border-collapse: collapse;
}

.table th {
    border-bottom: 1pt solid #555;
    padding: 0 6pt 4pt 0;
}

.table td {
    padding: 4pt 6pt 4pt 0;
    vertical-align: top;
}

.caption {
    margin-bottom: 6pt;
}

.footnote {
    font-size: 8pt;
    margin-top: 6pt;
    padding-top: 2pt;
    background: url("../img/footnoteline.png") left top no-repeat;
}

ul {
    list-style-image: url("../img/arrow.png");
    margin: 10pt 0;
    padding-left: 30pt;
}

li {
    margin: 6pt 0;
    padding: 0;
}

code,.code {
    font-family: "Bitstream Vera Sans Mono", monospace;
    font-size: 90%;
    background: #f5f5f5;
    padding: 0.2em;
}

pre code {
    display: block;
    white-space: pre-wrap;
    padding: 0.5em;
    margin: 0.7em 0;
    max-width: 100%;
    overflow: auto;
}

div.code {
    padding: 0.5em;
    margin: 0.7em 0;
    max-width: 100%;
    overflow: auto;
}

figure {
    margin: 0;
}

.col1 {
    width: 45%;
    float: left;
}

.col2 {
    width: 45%;
    float: right;
}

